# young-agent

./: .gitignore  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  README.md  codecov.yml  qoder-assistant-e2e.md
.github/: FUNDING.yml  renovate.json5
.github/workflows/: coverage.yml  qoder-assistant-official-mcp-smoke.yml  qoder-assistant.yml  qoder-auto-review.yml  qoder-code-review.yml  semantic-pull-request.yml
crates/agent-cli/: Cargo.toml
crates/agent-runtime/: Cargo.toml
crates/agent-runtime/src/: lib.rs  run.rs  runtime.rs  turn.rs
crates/capability-coding/: Cargo.toml  coding-capability.toml
crates/capability-coding/src/: command.rs  command_input.rs  command_policy.rs  git_environment.rs  lib.rs  manifest.rs  patch.rs  read.rs  search.rs  tool_support.rs  tools.rs  workspace.rs
crates/capability-coding/tests/: builtin.rs  command_approval_runtime.rs  command_policy.rs  unsupported_platform.rs  workspace_tools.rs
crates/capability-coding/tests/common/: mod.rs
crates/cli-proof-surface/: Cargo.toml
crates/cli-proof-surface/src/: app.rs  approval.rs  args.rs  fake_provider.rs  lib.rs  main.rs  signals.rs  state.rs  terminal.rs
crates/cli-proof-surface/tests/: cli_smoke.rs
crates/event-store/: Cargo.toml
crates/event-store/src/: jsonl.rs  lib.rs  replay.rs
crates/event-store/tests/: agent_runtime.rs  event_store.rs
crates/model-runtime/: Cargo.toml
crates/model-runtime/src/: client.rs  fake.rs  id.rs  lib.rs  stream.rs
crates/model-runtime/tests/: public_api.rs
crates/platform-process/: Cargo.toml
crates/platform-process/src/: codecov_probe.rs  codecov_project_probe.rs  lib.rs
crates/tool-runtime/: Cargo.toml
crates/tool-runtime/src/: execution.rs  fake.rs  lib.rs  manifest.rs  registry.rs
crates/tool-runtime/tests/: manifest.rs  runtime.rs
docs/adr/: 0001-rust-core-typescript-surface.md  0002-general-agent-kernel-coding-first.md  0003-first-phase-local-workspace-boundary.md  0004-first-phase-command-approval-policy.md  0005-toml-built-in-capability-manifests.md  0006-defer-mcp-runtime.md  0007-canonical-event-log-first.md  0008-pi-monorepo-reference-only.md  0009-audited-platform-process-unsafe-boundary.md
docs/courses/: README.md
docs/courses/build-your-own-agent/: 00-course-log.md  README.md
docs/diagrams/: agent-harness-architecture.excalidraw  long-term-agent-architecture.excalidraw
docs/issues/agent-kernel-cli-proof-surface/: 01-scaffold-rust-workspace.md  02-core-contracts.md  03-jsonl-event-store.md  04-deterministic-agent-runtime.md  05-tool-runtime-and-capability-manifest.md  06-workspace-safety-and-coding-tools.md  07-command-approval-policy.md  08-cli-proof-surface.md  09-qoder-provider-smoke.md  10-seed-evals-and-validation-harness.md
docs/lessons/: README.md  capability-manifest-declares-not-executes.md  command-approval-policy-is-not-a-shell-sandbox.md  contract-review-wire-shape.md  event-log-replay-source-of-truth.md  workspace-boundary-needs-two-path-checks.md
docs/prd/: agent-kernel-cli-proof-surface-child-issues.md  agent-kernel-cli-proof-surface.md  first-batch-implementation-tasks.md
docs/research/: agent-roadmap-and-architecture-options.md  napi-rs-ts-cli-agent-core.md
