[workspace]
members = [
    "crates/model-runtime",
    "crates/agent-runtime",
    "crates/tool-runtime",
    "crates/event-store",
    "crates/capability-coding",
    "crates/cli-proof-surface",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/younggglcy/young-agent"

[workspace.dependencies]
cap-std = "4.0.2"
command-group = "5.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"

[workspace.lints.rust]
unsafe_code = "forbid"
