[workspace]
members = [
    "crates/model-runtime",
    "crates/agent-runtime",
    "crates/tool-runtime",
    "crates/event-store",
    "crates/platform-process",
    "crates/capability-coding",
    "crates/cli-proof-surface",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/younggglcy/young-agent"

[workspace.dependencies]
cap-std = "4.0.2"
cap-fs-ext = "4.0.2"
blake3 = "1.8.2"
command-group = "5.0.1"
ctrlc = { version = "3.5.2", features = ["termination"] }
exacl = "0.13.0"
getrandom = "0.3.4"
rustix = { version = "1.1.4", features = ["event", "fs", "process", "thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"
young-platform-process = { path = "crates/platform-process" }

[workspace.lints.rust]
unsafe_code = "forbid"
