[package]
name = "young-agent-runtime"
version.workspace = true
edition.workspace = true
repository.workspace = true
description = "Agent Run orchestration boundary for the Agent Kernel."

[dependencies]
serde.workspace = true
serde_json.workspace = true
young-model-runtime = { path = "../model-runtime" }
young-tool-runtime = { path = "../tool-runtime" }

[dev-dependencies]

[lints]
workspace = true
