[package]
name = "young-capability-coding"
version.workspace = true
edition.workspace = true
repository.workspace = true
description = "Built-in Coding Capability boundary for the Agent Kernel."

[dependencies]
cap-std.workspace = true
command-group.workspace = true
serde_json.workspace = true
young-tool-runtime = { path = "../tool-runtime" }

[lints]
workspace = true
