[package]
name = "young-capability-coding"
version.workspace = true
edition.workspace = true
repository.workspace = true
description = "Built-in Coding Capability boundary for the Agent Kernel."

[dependencies]
blake3.workspace = true
cap-std.workspace = true
command-group.workspace = true
getrandom.workspace = true
serde_json.workspace = true
young-tool-runtime = { path = "../tool-runtime" }

[target.'cfg(unix)'.dependencies]
rustix.workspace = true

[target.'cfg(windows)'.dependencies]
cap-fs-ext.workspace = true

[target.'cfg(any(target_os = "macos", target_os = "linux", target_os = "freebsd"))'.dependencies]
exacl.workspace = true

[lints.rust]
unsafe_code = "deny"
