[package]
name = "young-capability-coding"
version.workspace = true
edition.workspace = true
repository.workspace = true
description = "Built-in Coding Capability boundary for the Agent Kernel."

[dependencies]
blake3.workspace = true
cap-std.workspace = true
command-group.workspace = true
getrandom.workspace = true
serde_json.workspace = true
young-tool-runtime = { path = "../tool-runtime" }
young-platform-process.workspace = true

[target.'cfg(unix)'.dependencies]
rustix.workspace = true

[target.'cfg(windows)'.dependencies]
cap-fs-ext.workspace = true

[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
exacl.workspace = true

[dev-dependencies]
young-agent-runtime = { path = "../agent-runtime" }
young-event-store = { path = "../event-store" }
young-model-runtime = { path = "../model-runtime" }

[lints]
workspace = true
