[package]
name = "young-tool-runtime"
version.workspace = true
edition.workspace = true
repository.workspace = true
description = "Tool definition, policy, and execution boundary for the Agent Kernel."

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

[lints]
workspace = true
